# Proxy-Pointer-RAG

./: .gitignore  CHANGES.md  README.md  pyproject.toml
DocComparator/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
DocComparator/data/uploads/: ATT.md  Emerson.md  TRoadhouse.md
DocComparator/results/: Emerson vs TR - collateral.md  Emerson vs TR - default.md  Emerson vs TR - financial covenant.md  Emerson vs TR - warranties.md  TR to Emerson - warranties.md  VF vs VP - SDS.md  VF vs VP - SVG.md
DocComparator/src/: config.py
DocComparator/src/comparison/: cross_retriever.py  section_comparator.py  section_selector.py
DocComparator/src/extraction/: extract_pdf_to_md.py
DocComparator/src/indexing/: build_doc_index.py  build_skeleton_trees.py
DocComparator/src/report/: report_builder.py
DocComparator/src/validation/: criteria_validator.py
MultiModal/: .env.example  README.md  pyproject.toml
Text-Only/: .env.example  .gitignore  README.md  pyproject.toml
Text-Only/data/documents/: AMD_2022_10K.md  AMERICANEXPRESS_2022_10K.md  BOEING_2022_10K.md  PEPSICO_2022_10K.md
Text-Only/data/index/: index.faiss  index.pkl  indexing_state.json
Text-Only/data/results/: Test_Questions_scorecard_1780142689.md
Text-Only/data/trees/: AMD_2022_10K_structure.json  AMERICANEXPRESS_2022_10K_structure.json  BOEING_2022_10K_structure.json  PEPSICO_2022_10K_structure.json
src/pprag/: __init__.py  cli.py  faiss_security.py  gemini_embeddings.py
src/pprag_doc_comparator/: __init__.py  app.py  config.py
src/pprag_doc_comparator/comparison/: cross_retriever.py  section_comparator.py  section_selector.py
src/pprag_doc_comparator/extraction/: extract_pdf_to_md.py
src/pprag_doc_comparator/indexing/: build_doc_index.py  build_skeleton_trees.py
src/pprag_doc_comparator/report/: report_builder.py
src/pprag_doc_comparator/validation/: criteria_validator.py
src/pprag_multimodal/: app.py  config.py  run_test_suite.py
src/pprag_multimodal/agent/: mm_rag_bot.py
src/pprag_multimodal/extraction/: extract_pdf.py
src/pprag_multimodal/indexing/: build_md_index.py  md_tree_builder.py
src/pprag_text_only/: config.py
src/pprag_text_only/agent/: benchmark.py  pp_rag_bot.py
src/pprag_text_only/extraction/: extract_pdf_to_md.py
src/pprag_text_only/indexing/: build_pp_index.py  build_skeleton_trees.py
tests/: test_cli_packaging.py  test_embedding_batching.py  test_performance_upgrades.py  test_text_rag_integration.py
