[project]
name = "pprag-multimodal"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "google-generativeai",
    "pillow",
    "python-dotenv",
    "faiss-cpu",
    "numpy",
    "markdown",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "pdfservices-sdk",
]

[tool.uv]
package = false
