[project]
name = "pprag-text"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "faiss-cpu",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "llama-cloud",
]

[tool.uv]
package = false
